added things to ORLAN section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -17,6 +17,11 @@
 	author={Jean-Pierre Balpe},
 	howpublished={\url{http://poetiques.blogg.org/}}
 }
+@misc{balpe_site,
+	title={Site officiel de {J}ean-{P}ierre {B}alpe},
+	author={Jean-Pierre Balpe},
+	howpublished={\url{http://www.balpe.name/}}
+}
 @misc{balpe_disparition,
 	author={Jean-Pierre Balpe},
 	title={La Disparition du Général Proust},
@@ -32,6 +37,23 @@
 	title        = {Poèmes {S}tein},
 	booktitle    = {La Disparition du Général Proust},
 }
+@conference{balpebootz1994,
+	author       = {Jean-Pierre Balpe}, 
+	title        = {A:{$\backslash$ LITTERATURE $\hookleftarrow$}},
+	booktitle    = {Les {C}ahiers du {CIRCAV}},
+	year         = 1994,
+	editor       = {Philippe Bootz},
+	address      = {Villeneuve d'{A}scq},
+	organization = {Université de Lille 3},
+	publisher    = {{MOTS-VOIR, GERICO-CIRCAV}},
+}
+@misc{orlan_grand_palais,
+	note={[en ligne, disponible sur \url{https://www.grandpalais.fr/fr/article/vous-allez-voir-orlan-en-double-au-grand-palais}, dernier accès 1è juin 2018]},
+	title={Vous allez voir ORLAN en double au Grand Palais},
+	year={2018},
+	month={mars},
+	}
+
 @article{balpe1994,
 	doi = {10.3406/litt.1994.2351},
 	url = {https://doi.org/10.3406/litt.1994.2351},
